<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SerialPortHelper</string>
    <string name="title_name">SerialPortHelper</string>
    <string name="acceptpart">AcceptPart</string>
    <string name="menu_settings">Settings</string>
    <string name="sentpart">SentPart</string>
    <string name="CheckBox1">Hex Display</string>
    <string name="CheckBox2">Hex Send</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="set">Set</string>
    <string name="clear">Clear Accept</string>
    <string name="port">Port：</string>
    <string name="baudrate">Baudrate：</string>
    <string name="sure">Set</string>
    <string name="dialog_databit">Data Bit</string>
    <string name="back">Back</string>
    <string name="ok">Ok</string>
    <string name="cancle">Cancel</string>
    <string name="clear1">Clear Send</string>
    <string name="warning1">Failed to open the port, please configure first!</string>
    <string name="warning2">Failed to open the port, please check whether the port is correct!</string>
    <string name="poweron">Power On</string>
    <string name="poweroff">Power Off</string>
    <string name="path">Electrical Path:</string>
    <string name="openserial">Open SerialPort</string>
    <string name="closeserial">Close SerialPort</string>
    <string name="exittofrist">Return</string>
    <string name="stopbit">Stop Bit:</string>
    <string name="crc">Check Bit:</string>
    <string name="no_crc">NONE</string>
    <string name="odd_crc">ODD</string>
    <string name="even_crc">EVEN</string>
    <string name="setpbp">Setting</string>
    <string name="check_updates">Check Updates</string>

    <string name="add_gpio">add</string>
    <string name="clear_gpio">clear</string>
    <color name="hotpink">#FF69B4</color><!--热粉红色 -->
    <color name="black">#000000</color><!--黑色 -->
    <color name="white">#FFFFFF</color><!--白色 -->
    <string name="databit">Data Bit:</string>
    <string name="send_hex_hint">please input data like "0a0b1f3d0a"</string><!--白色 -->
    <string name="send_hex_hint_null"></string><!--白色 -->
    <string name="input_gpio">Setting Gpio</string>
    <string name="please_gpio">Please set the GPIO value!</string>
</resources>